# golf-trajectory-sim

./: .gitignore  CMakeLists.txt  README.md
include/: Club.hpp  ClubDatabase.hpp  ClubInput.hpp  Renderer.hpp  Simulation.hpp  Vector2.hpp
src/: ClubDatabase.cpp  ClubInput.cpp  Renderer.cpp  Simulation.cpp  Vector2.cpp  main.cpp
